# briefly

./: .gitignore  Makefile  README.md  generator.py  notion_generator.py  notion_improved.py  notion_with_charts.py  pyproject.toml  requirements.txt  test.py
.github/workflows/: build.yml  ci.yml
model/: style.py  ticket.py
rendering/: pdf_generator.py
src/: notion_improved.py  notion_with_charts.py
src/ai-slop/: notion_generator.py  notion_with_charts.py
src/briefly/: __init__.py  style.py
src/briefly/model/: report_data.py  style.py  ticket.py
src/briefly/rendering/: graphs.py  icons.py  pdf_generator.py
src/fpdf_reporting/: cli.py
src/fpdf_reporting/model/: style.py  ticket.py
src/fpdf_reporting/rendering/: icons.py  pdf_generator.py
src/model/: style.py
src/rendering/: pdf_generator.py
tests/: generate_test_report.py  test.py  test_model.py  test_rendering.py
