[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-reporting"
version = "0.1.0"
readme = "README.md"
description = "A package for generating PDF reports."
requires-python = ">=3.14"

dependencies = [
    "fpdf2>=2.8.5",
    "matplotlib>=3.10.8"
]

[project.optional-dependencies]
dev = [
    "ruff>=0.14.10",
    "mypy>=1.8.0",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "types-fpdf2>=2.8.4"
]

[project.scripts]
lint = "fpdf_reporting.cli:lint"
format = "fpdf_reporting.cli:format"
typecheck = "fpdf_reporting.cli:typecheck"
coverage = "fpdf_reporting.cli:coverage"

[tool.ruff]
line-length = 88
target-version = "py314"
src = ["src"]

[tool.mypy]
python_version = "3.14"
strict = true
mypy_path = ["src"]
explicit_package_bases = true
exclude = "tests/"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"fpdf_reporting.fonts" = ["*.ttf"]

[tool.pytest.ini_options]
addopts = "--cov=fpdf_reporting --cov-report=term-missing"
testpaths = ["tests"]

[tool.coverage.run]
omit = [
    "*/__init__.py",
    "cli.py",
]
branch = true
source = ["fpdf_reporting"]

[tool.coverage.report]
show_missing = true
fail_under = 80